# itext7-rs

./: Cargo.toml  Makefile
src/: error.rs  lib.rs  traits.rs  types.rs
src/bindings/: mod.rs
src/bindings/itext/: mod.rs
src/bindings/itext/kernel/: mod.rs
src/bindings/itext/kernel/geom/: mod.rs  page_size.rs
src/bindings/itext/kernel/pdf/: document_properties.rs  mod.rs  pdf_document.rs  pdf_reader.rs  pdf_writer.rs  stamping_properties.rs
src/bindings/itext/layout/: document.rs  mod.rs
src/bindings/java/: file.rs
