[package]
name = "itext"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
jni = "0.19.0"
ejni = "0.0.1"

[dev-dependencies]
lazy_static = "1.4.0"
parking_lot = "0.12.0"
tempfile = "3.3.0"
const_format = "0.2.22"

[dev-dependencies.jni]
version = "0.19.0"
features = ["invocation"]